2010-08-26  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.19.

	* net/trampver.el: Update release number.

2010-08-26  Chong Yidong  <cyd@stupidchicken.com>

	* help.el (help-map): Bind `C-h P' to describe-package.

	* menu-bar.el (menu-bar-describe-menu): Add describe-package.

	* emacs-lisp/package.el (package-refresh-contents): Catch errors
	when downloading archives.
	(describe-package-1): Add package commentary.
	(package-install-button-action): New function.
	(package-menu-mode-map): Bind ? to package-menu-describe-package.
	(package-menu-view-commentary): Function removed.
	(package-list-packages-internal): Hide the `package' package too.

2010-08-25  Kenichi Handa  <handa@m17n.org>

	* language/misc-lang.el ("Arabic"): New language environment.
	Setup composition-function-table for Arabic characters.

	* international/fontset.el (setup-default-fontset): Fix typo for
	arabic OTF spec (fini->fina).

2010-08-25  Jan Djärv  <jan.h.d@swipnet.se>

	* menu-bar.el (menu-bar-set-tool-bar-position): Set frame parameter
	on all frames.

2010-08-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Allow cleaning up blanks without blank
	visualization (Bug#6651).  Adjust help window for
	whitespace-toggle-options (Bug#6479).  Allow to use fill-column
	instead of whitespace-line-column (from EmacsWiki).  New version
	13.1.
	(whitespace-style): Added new value 'face.  Adjust docstring.
	(whitespace-space, whitespace-hspace, whitespace-tab): Adjust
	foreground property face.
	(whitespace-line-column): Adjust docstring and type declaration.
	(whitespace-style-value-list, whitespace-toggle-option-alist)
	(whitespace-help-text): Adjust const initialization.
	(whitespace-toggle-options, global-whitespace-toggle-options):
	Adjust docstring.
	(whitespace-display-window, whitespace-interactive-char)
	(whitespace-style-face-p, whitespace-color-on): Adjust code.
	(whitespace-help-scroll): New fun.

2010-08-24  Chong Yidong  <cyd@stupidchicken.com>
